// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tuxedo_AntdExtensions - Checkbox - Rendering CheckBox - checked 1`] = `
.c0 .ant-checkbox-checked .ant-checkbox-inner:after {
  opacity: 1;
}

.c0.ant-checkbox-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 4px;
}

.c0.ant-checkbox-wrapper.ant-checkbox-wrapper {
  margin: 0px;
}

.c0.ant-checkbox-wrapper + span,
.c0 .ant-checkbox + span {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: initial;
}

.c0 .ant-checkbox {
  top: 0;
}

.c0 .ant-checkbox input {
  margin: 0;
}

.c0 .ant-checkbox-inner {
  border-radius: 3px;
}

.c0 .ant-checkbox-indeterminate .ant-checkbox-inner {
  background-color: #0071EC;
  border-color: #0071EC;
}

.c0 .ant-checkbox-indeterminate .ant-checkbox-inner:after {
  height: 2px;
  width: 8px;
  background-color: #FFFFFF;
  border-radius: 1px;
}

<label
  className="c0 ant-checkbox-wrapper"
  onMouseEnter={undefined}
  onMouseLeave={undefined}
  style={undefined}
>
  <span
    className="ant-checkbox ant-checkbox-checked"
    style={Object {}}
  >
    <input
      autoFocus={undefined}
      checked={true}
      className="ant-checkbox-input"
      disabled={undefined}
      id={undefined}
      name={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={undefined}
      onFocus={[Function]}
      readOnly={undefined}
      tabIndex={undefined}
      type="checkbox"
      value={undefined}
    />
    <span
      className="ant-checkbox-inner"
    />
  </span>
  <span>
    Checkbox
  </span>
</label>
`;

exports[`Tuxedo_AntdExtensions - Checkbox - Rendering CheckBox - color hash 1`] = `
.c0.ant-checkbox-wrapper:hover .ant-checkbox-inner {
  border-color: #63AEFF;
}

.c0 .ant-checkbox:hover .ant-checkbox-inner,
.c0 .ant-checkbox-input:focus + .ant-checkbox-inner {
  border-color: #63AEFF;
}

.c0 .ant-checkbox-checked:after {
  border: 1px solid #63AEFF;
}

.c0 .ant-checkbox-indeterminate .ant-checkbox:after {
  background-color: #63AEFF;
}

.c0 .ant-checkbox-checked .ant-checkbox-inner {
  background-color: #63AEFF;
  border-color: #63AEFF;
}

.c0 .ant-checkbox-checked .ant-checkbox-inner:after {
  opacity: 1;
}

.c0.ant-checkbox-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 4px;
}

.c0.ant-checkbox-wrapper.ant-checkbox-wrapper {
  margin: 0px;
}

.c0.ant-checkbox-wrapper + span,
.c0 .ant-checkbox + span {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: initial;
}

.c0 .ant-checkbox {
  top: 0;
}

.c0 .ant-checkbox input {
  margin: 0;
}

.c0 .ant-checkbox-inner {
  border-radius: 3px;
}

.c0 .ant-checkbox-indeterminate .ant-checkbox-inner {
  background-color: #0071EC;
  border-color: #0071EC;
}

.c0 .ant-checkbox-indeterminate .ant-checkbox-inner:after {
  height: 2px;
  width: 8px;
  background-color: #FFFFFF;
  border-radius: 1px;
}

<label
  className="c0 ant-checkbox-wrapper"
  onMouseEnter={undefined}
  onMouseLeave={undefined}
  style={undefined}
>
  <span
    className="ant-checkbox"
    style={Object {}}
  >
    <input
      autoFocus={undefined}
      checked={false}
      className="ant-checkbox-input"
      disabled={undefined}
      id={undefined}
      name={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={undefined}
      onFocus={[Function]}
      readOnly={undefined}
      tabIndex={undefined}
      type="checkbox"
      value={undefined}
    />
    <span
      className="ant-checkbox-inner"
    />
  </span>
  <span>
    Color hash
  </span>
</label>
`;

exports[`Tuxedo_AntdExtensions - Checkbox - Rendering CheckBox - hideInnerTick 1`] = `
.c0 .ant-checkbox-checked .ant-checkbox-inner:after {
  opacity: 0;
}

.c0.ant-checkbox-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 4px;
}

.c0.ant-checkbox-wrapper.ant-checkbox-wrapper {
  margin: 0px;
}

.c0.ant-checkbox-wrapper + span,
.c0 .ant-checkbox + span {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: initial;
}

.c0 .ant-checkbox {
  top: 0;
}

.c0 .ant-checkbox input {
  margin: 0;
}

.c0 .ant-checkbox-inner {
  border-radius: 3px;
}

.c0 .ant-checkbox-indeterminate .ant-checkbox-inner {
  background-color: #0071EC;
  border-color: #0071EC;
}

.c0 .ant-checkbox-indeterminate .ant-checkbox-inner:after {
  height: 2px;
  width: 8px;
  background-color: #FFFFFF;
  border-radius: 1px;
}

<label
  className="c0 ant-checkbox-wrapper"
  onMouseEnter={undefined}
  onMouseLeave={undefined}
  style={undefined}
>
  <span
    className="ant-checkbox"
    style={Object {}}
  >
    <input
      autoFocus={undefined}
      checked={false}
      className="ant-checkbox-input"
      disabled={undefined}
      id={undefined}
      name={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={undefined}
      onFocus={[Function]}
      readOnly={undefined}
      tabIndex={undefined}
      type="checkbox"
      value={undefined}
    />
    <span
      className="ant-checkbox-inner"
    />
  </span>
  <span>
    HideInnerTick
  </span>
</label>
`;

exports[`Tuxedo_AntdExtensions - Checkbox - Rendering Default CheckBox 1`] = `
.c0 .ant-checkbox-checked .ant-checkbox-inner:after {
  opacity: 1;
}

.c0.ant-checkbox-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 4px;
}

.c0.ant-checkbox-wrapper.ant-checkbox-wrapper {
  margin: 0px;
}

.c0.ant-checkbox-wrapper + span,
.c0 .ant-checkbox + span {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: initial;
}

.c0 .ant-checkbox {
  top: 0;
}

.c0 .ant-checkbox input {
  margin: 0;
}

.c0 .ant-checkbox-inner {
  border-radius: 3px;
}

.c0 .ant-checkbox-indeterminate .ant-checkbox-inner {
  background-color: #0071EC;
  border-color: #0071EC;
}

.c0 .ant-checkbox-indeterminate .ant-checkbox-inner:after {
  height: 2px;
  width: 8px;
  background-color: #FFFFFF;
  border-radius: 1px;
}

<label
  className="c0 ant-checkbox-wrapper"
  onMouseEnter={undefined}
  onMouseLeave={undefined}
  style={undefined}
>
  <span
    className="ant-checkbox"
    style={Object {}}
  >
    <input
      autoFocus={undefined}
      checked={false}
      className="ant-checkbox-input"
      disabled={undefined}
      id={undefined}
      name={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={undefined}
      onFocus={[Function]}
      readOnly={undefined}
      tabIndex={undefined}
      type="checkbox"
      value={undefined}
    />
    <span
      className="ant-checkbox-inner"
    />
  </span>
  <span>
    Checkbox
  </span>
</label>
`;
